Añadiendo output y URL al README