@@ -1,2 +1,144 @@
 # Miniproyecto de Gestión de Buques y Contenedores
 
+## URL en GitHub
+
+[KevinRCorrales/Estructuras_de_Datos](https://github.com/KevinRCorrales/Estructuras_de_Datos/tree/main/Momento1)
+
+## Output del programa
+
+```
+[Kevin@archlinux Estructuras_de_Datos]$  cd /home/Kevin/GitHub/Estructuras_de_Datos ; /usr/bin/env /usr/lib/jvm/java-25-openjdk/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /home/Kevin/.config/VSCodium/User/workspaceStorage/264bacede3785dfb0a9003208d6b73e2/redhat.java/jdt_ws/Estructuras_de_Datos_9680e0b0/bin Main 
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+1
+
+1. Acceder al estado de buques.
+2. Llenar los buques.
+Ingrese la opción que desea ejecutar: 1
+null
+null
+null
+null
+null
+null
+null
+null
+null
+null
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+1
+
+1. Acceder al estado de buques.
+2. Llenar los buques.
+Ingrese la opción que desea ejecutar: 2
+
+ERROR: Los contenedores están vacíos, llenelos primero.
+
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+2
+
+1. Acceder al estado de contenedores.
+2. Llenar los contenedores.
+Ingrese la opción que desea ejecutar: 2
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+1
+
+1. Acceder al estado de buques.
+2. Llenar los buques.
+Ingrese la opción que desea ejecutar: 2
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+1
+
+1. Acceder al estado de buques.
+2. Llenar los buques.
+Ingrese la opción que desea ejecutar: 1
+Buque [id=862311, contenedores=[Contenedor [peso=31, id=899625, origen=Chile] | Contenedor [peso=21, id=248965, origen=China] | Contenedor [peso=29, id=102849, origen=China] | Contenedor [peso=10, id=794302, origen=China] | Contenedor [peso=25, id=811983, origen=Chile] | Contenedor [peso=29, id=720699, origen=Chile] | Contenedor [peso=12, id=792641, origen=China] | Contenedor [peso=31, id=622707, origen=China] | Contenedor [peso=21, id=672081, origen=Chile] | Contenedor [peso=22, id=704898, origen=Chile] | ]
+Buque [id=762123, contenedores=[Contenedor [peso=26, id=615612, origen=Espania] | Contenedor [peso=17, id=831365, origen=Espania] | Contenedor [peso=17, id=776970, origen=Chile] | Contenedor [peso=34, id=188457, origen=Espania] | Contenedor [peso=11, id=845596, origen=Chile] | Contenedor [peso=12, id=982067, origen=Japón] | Contenedor [peso=17, id=809826, origen=China] | Contenedor [peso=27, id=571959, origen=Chile] | Contenedor [peso=18, id=609433, origen=Espania] | Contenedor [peso=29, id=170232, origen=Espania] | ]
+Buque [id=758206, contenedores=[Contenedor [peso=22, id=321787, origen=China] | Contenedor [peso=14, id=894548, origen=China] | Contenedor [peso=23, id=211322, origen=Japón] | Contenedor [peso=33, id=350359, origen=Japón] | Contenedor [peso=18, id=600639, origen=China] | Contenedor [peso=27, id=351432, origen=Chile] | Contenedor [peso=27, id=490126, origen=Japón] | Contenedor [peso=11, id=440057, origen=Chile] | Contenedor [peso=12, id=751050, origen=Japón] | Contenedor [peso=14, id=612426, origen=China] | ]
+Buque [id=298922, contenedores=[Contenedor [peso=31, id=952238, origen=Japón] | Contenedor [peso=21, id=982945, origen=China] | Contenedor [peso=33, id=986593, origen=Chile] | Contenedor [peso=17, id=542300, origen=Japón] | Contenedor [peso=29, id=339290, origen=Chile] | Contenedor [peso=26, id=209983, origen=Chile] | Contenedor [peso=19, id=719991, origen=Chile] | Contenedor [peso=23, id=136858, origen=Espania] | Contenedor [peso=35, id=855702, origen=China] | Contenedor [peso=26, id=233033, origen=Espania] | ]
+Buque [id=801979, contenedores=[Contenedor [peso=14, id=269440, origen=China] | Contenedor [peso=15, id=285818, origen=Espania] | Contenedor [peso=19, id=888201, origen=China] | Contenedor [peso=22, id=707663, origen=Japón] | Contenedor [peso=18, id=352764, origen=Espania] | Contenedor [peso=22, id=117813, origen=Chile] | Contenedor [peso=13, id=321785, origen=Espania] | Contenedor [peso=27, id=677621, origen=Chile] | Contenedor [peso=24, id=987785, origen=Espania] | Contenedor [peso=22, id=522829, origen=Espania] | ]
+Buque [id=660480, contenedores=[Contenedor [peso=31, id=342220, origen=Espania] | Contenedor [peso=27, id=891202, origen=Espania] | Contenedor [peso=28, id=393166, origen=Japón] | Contenedor [peso=27, id=699792, origen=China] | Contenedor [peso=28, id=498726, origen=Japón] | Contenedor [peso=34, id=355935, origen=China] | Contenedor [peso=25, id=655304, origen=Japón] | Contenedor [peso=10, id=309313, origen=China] | Contenedor [peso=32, id=813380, origen=Chile] | Contenedor [peso=21, id=674755, origen=Espania] | ]
+Buque [id=833505, contenedores=[Contenedor [peso=18, id=593179, origen=China] | Contenedor [peso=24, id=520989, origen=Espania] | Contenedor [peso=35, id=498394, origen=China] | Contenedor [peso=16, id=219251, origen=Chile] | Contenedor [peso=16, id=135006, origen=Espania] | Contenedor [peso=23, id=289187, origen=Chile] | Contenedor [peso=23, id=136151, origen=Japón] | Contenedor [peso=25, id=686926, origen=Espania] | Contenedor [peso=18, id=257515, origen=Espania] | Contenedor [peso=34, id=668214, origen=China] | ]
+Buque [id=515107, contenedores=[Contenedor [peso=31, id=239706, origen=Chile] | Contenedor [peso=35, id=999950, origen=Espania] | Contenedor [peso=31, id=191850, origen=Japón] | Contenedor [peso=23, id=525638, origen=Chile] | Contenedor [peso=23, id=529399, origen=China] | Contenedor [peso=27, id=822067, origen=Chile] | Contenedor [peso=15, id=182593, origen=Espania] | Contenedor [peso=19, id=970227, origen=Espania] | Contenedor [peso=16, id=230579, origen=Chile] | Contenedor [peso=32, id=941601, origen=Japón] | ]
+Buque [id=318401, contenedores=[Contenedor [peso=19, id=383107, origen=Japón] | Contenedor [peso=32, id=110585, origen=Espania] | Contenedor [peso=28, id=907105, origen=Espania] | Contenedor [peso=35, id=898641, origen=Espania] | Contenedor [peso=20, id=598266, origen=China] | Contenedor [peso=19, id=457519, origen=Chile] | Contenedor [peso=24, id=460735, origen=China] | Contenedor [peso=29, id=275724, origen=Japón] | Contenedor [peso=30, id=742586, origen=Japón] | Contenedor [peso=35, id=483026, origen=China] | ]
+Buque [id=572362, contenedores=[Contenedor [peso=26, id=127322, origen=Espania] | Contenedor [peso=27, id=547196, origen=Espania] | Contenedor [peso=24, id=721260, origen=Espania] | Contenedor [peso=31, id=538568, origen=China] | Contenedor [peso=30, id=544226, origen=Japón] | Contenedor [peso=31, id=987236, origen=Chile] | Contenedor [peso=12, id=901659, origen=Chile] | Contenedor [peso=33, id=944327, origen=Japón] | Contenedor [peso=10, id=588530, origen=Japón] | Contenedor [peso=31, id=916216, origen=China] | ]
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+3
+El peso total de los contenedores es: 2369.0
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+4
+20 contenedores de Japón
+26 contenedores de China
+26 contenedores de Chile
+28 contenedores de Espania
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+1
+
+1. Acceder al estado de buques.
+2. Llenar los buques.
+Ingrese la opción que desea ejecutar: 2
+
+Error: Está intentado sobreescribir los buques, el arreglo está lleno.
+
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+2
+
+1. Acceder al estado de contenedores.
+2. Llenar los contenedores.
+Ingrese la opción que desea ejecutar: 2
+
+Error: Está intentando sobreescribir los contenedores, la matriz está llena.
+
+Menú: Ingrese el número de la opción a ejecutar:
+1. Acceso al menú de registro de buques.
+2. Acceso al menú de registro de contenedores
+3. Mostrar el peso total de los contenedores.
+4. Listar de manera agrupada el origen de los contenedores.
+5. Cierre de la aplicación.
+5
+[Kevin@archlinux Estructuras_de_Datos]$ 
+```
